--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container mx-auto px-4 py-12 flex flex-col items-center justify-center min-h-screen">
         <div class="logo-placeholder mb-8"></div>
         
-        <h1 class="text-4xl md:text-5xl font-light mb-4 text-center">UAE Development Company</h1>
+        <h1 class="text-4xl md:text-5xl font-light mb-4 text-center">Smart Development LLC</h1>
         
         <div class="text-xl md:text-2xl font-light mb-8 text-center text-gray-300">
             Our website is under development
